--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-h1{
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-color: #333446;
+*{
+    margin: 0; /*Elimina los margenes*/
+    padding: 0; /*Elimina los rellenos*/
+    box-sizing: content-box; /*Incluye el padding y border detro del tamaño del elemeto*/
 }
